implemented updateReadme and processBadgeBuilders to support badge builders

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [],
   "author": "Zane Rockenbaugh <zane@liquid-labs.com>",
   "license": "UNLICENSED",
@@ -13,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/liquid-labs/catalyst-lib-badges/issues"
   },
-  "homepage": "https://github.com/liquid-labs/catalyst-lib-badges#readme"
+  "homepage": "https://github.com/liquid-labs/catalyst-lib-badges#readme",
+  "devDependencies": {
+    "@liquid-labs/catalyst-resource-babel-and-rollup": "^1.0.0-alpha.3",
+    "@liquid-labs/catalyst-resource-eslint": "^1.0.0-alpha.1",
+    "@liquid-labs/catalyst-resource-jest": "^1.0.0-alpha.3"
+  },
+  "dependencies": {
+    "@liquid-labs/npm-toolkit": "^1.0.0-alpha.7"
+  }
 }
