update .catalyst-data.yaml to latest format; update coverage badge

--- a/.catalyst-data.yaml
+++ b/.catalyst-data.yaml
@@ -5,7 +5,7 @@ workflows:
         - '@liquid-labs/catalyst-resource-babel-and-rollup'
         - '@liquid-labs/catalyst-resource-eslint'
         - '@liquid-labs/catalyst-resource-jest'
-      scripts:
+      artifacts:
         - builder: '@liquid-labs/catalyst-builder-node'
           version: 1.0.0-alpha.0
           priority: 0
@@ -65,13 +65,13 @@ workflows:
 badges:
   coverage:
     dependencies: []
-    scripts:
+    artifacts:
       - builder: '@liquid-labs/catalyst-builder-badge-coverage'
         version: 1.0.0-alpha.0
         priority: 0
-        badgeLine: >-
+        content: >-
           [![coverage:
-          68%](./.readme-assets/coverage.svg)](https://github.com/liquid-labs/catalyst-lib-badges/pulls)
+          58%](./.readme-assets/coverage.svg)](https://github.com/liquid-labs/catalyst-lib-badges/pulls?q=is%3Apr+is%3Aclosed)
         path: >-
           /Users/zane/.liq/playground/liquid-labs/catalyst-lib-badges/.readme-assets/coverage.svg
         purpose: Test coverage badge for README.md.
