--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
   },
   "homepage": "https://github.com/liquid-labs/sdlc-lib-badges#readme",
   "devDependencies": {
-    "@liquid-labs/catalyst-resource-babel-and-rollup": "^1.0.0-alpha.3",
-    "@liquid-labs/catalyst-resource-eslint": "^1.0.0-alpha.1",
-    "@liquid-labs/catalyst-resource-jest": "^1.0.0-alpha.3"
+    "@liquid-labs/sdlc-resource-babel-and-rollup": "^1.0.0-alpha.5",
+    "@liquid-labs/sdlc-resource-eslint": "^1.0.0-alpha.2",
+    "@liquid-labs/sdlc-resource-jest": "^1.0.0-alpha.5"
   },
   "dependencies": {
-    "@liquid-labs/npm-toolkit": "^1.0.0-alpha.17"
+    "@liquid-labs/npm-toolkit": "^1.0.0-alpha.17",
+    "js-yaml": "^4.1.0"
+  },
+  "_npm-check-plus": {
+    "depcheck": {
+      "ignoreMatches": ["@liquid-labs/sdlc-resource-*"]
+    }
   }
 }
